<resources>
    <string name="app_name">MQTT Client</string>
    <string name="title_activity_brokers_list">Brokers</string>

    <string-array name="qos_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="comparators_array">
        <item>Equals</item>
        <item>Doesn\'t Equal</item>
        <item>Matches Regex</item>
        <item>Doesn\'t Match Regex</item>
        <item>Maths: Less Than</item>
        <item>Maths: Greater Than</item>
        <item>Maths: Equals</item>
        <item>Maths: Is\'t Equal To</item>
    </string-array>

    <string-array name="comparators_array_method">
        <item>eq</item>
        <item>neq</item>
        <item>mR</item>
        <item>nmR</item>
        <item>mlt</item>
        <item>mgt</item>
        <item>meq</item>
        <item>mneq</item>
    </string-array>

    <string name="qos_spinner_title">QOS</string>

    <string name="ssl_switch_desc">Use SSL for connection</string>
    <string name="ws_switch_desc">Use Websockets for connection</string>
    <string name="pref_title_cleansession">Clean Session</string>
    <string name="pref_title_ssl">Enable SSL</string>
    <string name="pref_title_ws">Use Websockets</string>
    <string name="pref_title_url">Host</string>
    <string name="pref_title_clientid">Client ID</string>
    <string name="pref_default_url"></string>
    <string name="pref_default_port">1883</string>
    <string name="pref_default_keepalive">1200</string>
    <string name="pref_title_port">Port</string>
    <string name="pref_title_keepalive">Keep-Alive Interval (seconds)</string>
    <string name="pref_default_user"></string>
    <string name="pref_title_user">Username</string>
    <string name="pref_default_password" />
    <string name="pref_title_password">Password</string>
    <string name="title_activity_action_edit">Publish MQTT Message</string>
    <string name="topic">Topic</string>
    <string name="message">Message</string>
    <string name="message_tasker_var">varmessage</string>
    <string name="topic_tasker_var">varmqtttopic</string>
    <string name="plugin_name">MQTT Publish</string>
    <string name="twofortyfouram_locale_menu_dontsave">Cancel</string>
    <string name="twofortyfouram_locale_menu_save">Save</string>
    <string name="twofortyfouram_locale_breadcrumb_format">%1$s%2$s%3$s</string>
    <string name="twofortyfouram_locale_breadcrumb_separator"><![CDATA[\\u0020>\\u0020]]></string>
    <string name="cleansession_desc">Clean Session</string>
    <string name="ca_crt">Import CA crt file</string>
    <string name="ca_crt_desc">Import a crt file to be used as the CA</string>
    <string name="ca_crt_default" />
    <string name="client_crt">Import Client Certificate file</string>
    <string name="client_crt_desc">Import a crt file to be used as client certificate</string>
    <string name="client_crt_default" />
    <string name="client_key">Import Client Key file</string>
    <string name="client_key_desc">Import a key file to be used as key for client certificate</string>
    <string name="client_key_default" />
    <string name="client_key_pwd_default" />
    <string name="client_key_pwd">Client Key Password</string>
    <string name="client_p12">Import Client .p12 file</string>
    <string name="client_p12_desc">Import a client p12 file having client.crt and client.key. If this is chosen, the client key and client crt chosen above will be ignored.</string>
    <string name="client_p12_default" />
    <string name="keepalive_desc">Keep Alive Interval in seconds</string>
    <string name="password_desc">Enter your Password</string>
    <string name="user_desc">Enter your Username</string>
    <string name="port_desc">Broker port</string>
    <string name="url_desc">Broker URL</string>
    <string name="client_key_pwd_desc">Client Key/p12 Password</string>
    <string name="title_activity_add_edit_brokers">Add Broker</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string-array name="pref_notification_priority_list_titles">
        <item>Max</item>
        <item>High</item>
        <item>Default</item>
        <item>Low</item>
        <item>Min</item>
    </string-array>
    <string-array name="pref_notification_priority_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Show Persistent Notification</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_lastwill_topic">Last-will topic</string>
    <string name="pref_title_lastwill_message">Last-will Message</string>
    <string name="pref_title_lastwill_qos">Last-will QOS</string>
    <string name="pref_title_lastwill_retained">Last-will Retained</string>
    <string name="enabled">Enabled</string>
    <string name="nickname">Nick Name</string>
    <string name="add">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!--mqtt strings-->
    <string name="broker">Broker</string>
    <string name="message_arrived">Message Arrived</string>
    <string name="action_settings">Settings</string>
    <string name="comparatorDivider">Optional settings below (for non-tasker users)</string>
    <string name="connection_lost_title">Connection Lost</string>
    <string name="connect_tasker_msg">If disabled, the broker will be enabled and connection attempt will be made. If the broker is already enabled, a reconnect attempt would be made.</string>
    <string name="title_activity_connect_tasker">Connect to broker</string>
    <string name="delete_all_messages">Delete all messages</string>
    <string name="v31_switch_desc">Enable/Disable this option if you are facing frequent reconnects</string>
    <string name="pref_title_v31">Use MQTT v3.1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_default_max_messages">0</string>
    <string name="pref_description_max_messages">Maximum number of messages to store</string>
    <string name="pref_title_max_messages">Max Messages</string>
    <string name="pref_notification_priority_title">Notification Priority</string>
    <string name="reconnect_title">Connection Re-established</string>
    <string name="add_topic">Add Topic</string>
    <string name="dialog_yes">Okay</string>
    <string name="add_topic_desc">Please subscribe to at least one topic for this broker!</string>
    <string name="channel_description_mqtt_service">Notification channel for MQTT Service running in background.</string>
    <string name="channel_name_mqtt_service">Persistent Notification</string>
    <string name="channel_name_mqtt_tasker">Tasker action</string>
    <string name="channel_description_mqtt_tasker">Channel used to notify of tasker actions being performed</string>
</resources>
