<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="Enabled"
        android:title="@string/enabled" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="NickName"
        android:title="@string/nickname" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="SSLEnabled"
        android:summary="@string/ssl_switch_desc"
        android:title="@string/pref_title_ssl" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="WSEnabled"
        android:summary="@string/ws_switch_desc"
        android:title="@string/pref_title_ws" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="v31"
        android:summary="@string/v31_switch_desc"
        android:title="@string/pref_title_v31" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_url"
        android:inputType="text"
        android:key="Host"
        android:summary="@string/url_desc"
        android:title="@string/pref_title_url" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_port"
        android:inputType="number"
        android:key="Port"
        android:summary="@string/port_desc"
        android:title="@string/pref_title_port" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_user"
        android:inputType="textCapWords"
        android:key="Username"
        android:summary="@string/user_desc"
        android:title="@string/pref_title_user" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_password"
        android:inputType="textPassword"
        android:key="Password"
        android:summary="@string/password_desc"
        android:title="@string/pref_title_password" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_keepalive"
        android:inputType="number"
        android:key="KeepAlive"
        android:summary="@string/keepalive_desc"
        android:title="@string/pref_title_keepalive" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_url"
        android:inputType="textCapWords"
        android:key="ClientId"
        android:title="@string/pref_title_clientid" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="CleanSession"
        android:summary="@string/cleansession_desc"
        android:title="@string/pref_title_cleansession" />

    <Preference
        android:key="CACrt"
        android:title="@string/ca_crt"
        android:summary="@string/ca_crt_desc"
        android:defaultValue="@string/ca_crt_default"/>

    <Preference
        android:key="ClientCrt"
        android:title="@string/client_crt"
        android:summary="@string/client_crt_desc"
        android:defaultValue="@string/client_crt_default"/>

    <Preference
        android:key="ClientKey"
        android:title="@string/client_key"
        android:summary="@string/client_key_desc"
        android:defaultValue="@string/client_key_default"/>

    <Preference
        android:key="ClientP12Crt"
        android:title="@string/client_p12"
        android:summary="@string/client_p12_desc"
        android:defaultValue="@string/client_p12_default"/>

    <EditTextPreference
        android:defaultValue="@string/client_key_pwd_default"
        android:inputType="textPassword"
        android:key="ClientKeyPwd"
        android:title="@string/client_key_pwd"
        android:summary="@string/client_key_pwd_desc"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_url"
        android:inputType="textCapWords"
        android:key="LastWillTopic"
        android:title="@string/pref_title_lastwill_topic" />

    <EditTextPreference
        android:key="LastWillMessage"
        android:title="@string/pref_title_lastwill_message" />

    <ListPreference
        android:key="LastWillQOS"
        android:entries="@array/qos_array"
        android:entryValues="@array/qos_array"
        android:title="@string/pref_title_lastwill_qos" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="LastWillRetained"
        android:title="@string/pref_title_lastwill_retained" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /-->

</PreferenceScreen>
